<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#009688"
    tools:context=".PlayerActivity">

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/scoreGrid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:columnCount="7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/turnHighlightGrid"
        app:rowCount="1">

        <ImageView
            android:id="@+id/playerTwoImg"
            android:layout_width="35dp"
            android:layout_height="30dp"
            android:contentDescription="@string/android"
            android:padding="3dp"
            android:paddingStart="3dp"
            android:paddingLeft="3dp"
            android:paddingTop="3dp"
            android:paddingEnd="3dp"
            android:paddingRight="3dp"
            android:paddingBottom="3dp"
            app:layout_column="3"
            app:layout_row="0"
            app:srcCompat="@drawable/lion" />

        <ImageView
            android:id="@+id/playerOneImg"
            android:layout_width="35dp"
            android:layout_height="30dp"
            android:contentDescription="@string/tiger"
            android:padding="3dp"
            android:paddingStart="3dp"
            android:paddingLeft="3dp"
            android:paddingTop="3dp"
            android:paddingEnd="3dp"
            android:paddingRight="3dp"
            android:paddingBottom="3dp"
            app:layout_column="1"
            app:layout_row="0"
            app:srcCompat="@drawable/tiger" />

        <TextView
            android:id="@+id/winTxt"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="Wins: "
            android:textColor="#fff"
            android:textSize="24sp"
            app:layout_column="0"
            app:layout_row="0" />

        <TextView
            android:id="@+id/scorePlayerOne"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:textColor="#fff"
            android:textSize="24sp"
            app:layout_column="2"
            app:layout_row="0" />

        <TextView
            android:id="@+id/scorePlayerTwo"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:textColor="#fff"
            android:textSize="24sp"
            app:layout_column="4"
            app:layout_row="0" />

        <TextView
            android:id="@+id/countDraw"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:textColor="#fff"
            android:textSize="24sp"
            app:layout_column="6"
            app:layout_row="0" />

        <TextView
            android:id="@+id/drawTxt"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="Draws:"
            android:textColor="#fff"
            android:textSize="24sp"
            app:layout_column="5"
            app:layout_row="0" />
    </androidx.gridlayout.widget.GridLayout>

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/turnHighlightGrid"
        android:layout_width="195dp"
        android:layout_height="65dp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/firstPlayer"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:contentDescription="@string/tiger"
            android:padding="3dp"
            android:paddingStart="3dp"
            android:paddingLeft="3dp"
            android:paddingTop="3dp"
            android:paddingEnd="3dp"
            android:paddingRight="3dp"
            android:paddingBottom="3dp"
            app:layout_column="0"
            app:layout_row="0"
            app:srcCompat="@drawable/tiger" />

        <ImageView
            android:id="@+id/vsImage"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:contentDescription="@string/vs"
            app:layout_column="1"
            app:layout_row="0"
            app:srcCompat="@drawable/vs" />

        <ImageView
            android:id="@+id/secondPlayer"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:contentDescription="@string/lion"
            android:padding="3dp"
            android:paddingStart="3dp"
            android:paddingLeft="3dp"
            android:paddingTop="3dp"
            android:paddingEnd="3dp"
            android:paddingRight="3dp"
            android:paddingBottom="10dp"
            app:layout_column="2"
            app:layout_row="0"
            app:srcCompat="@drawable/lion" />
    </androidx.gridlayout.widget.GridLayout>

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/grid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="#CDDC39"
        app:columnCount="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scoreGrid"
        app:rowCount="3">

        <ImageView
            android:id="@+id/img1"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:alpha="0.2"
            android:background="#4CAF50"
            android:contentDescription="@string/lion_or_tiger"
            android:onClick="tappedOnImgGrid"
            android:padding="3dp"
            android:paddingLeft="3dp"
            android:paddingTop="3dp"
            android:paddingRight="3dp"
            android:paddingBottom="3dp"
            android:tag="1"
            app:layout_column="0"
            app:layout_row="0" />

        <ImageView
            android:id="@+id/img2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:alpha="0.2"
            android:background="#4CAF50"
            android:contentDescription="@string/lion_or_tiger"
            android:onClick="tappedOnImgGrid"
            android:padding="3dp"
            android:paddingLeft="3dp"
            android:paddingTop="3dp"
            android:paddingRight="3dp"
            android:paddingBottom="3dp"
            android:tag="2"
            app:layout_column="1"
            app:layout_row="0" />

        <ImageView
            android:id="@+id/img3"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:alpha="0.2"
            android:background="#4CAF50"
            android:contentDescription="@string/lion_or_tiger"
            android:onClick="tappedOnImgGrid"
            android:padding="3dp"
            android:paddingLeft="3dp"
            android:paddingTop="3dp"
            android:paddingRight="3dp"
            android:paddingBottom="3dp"
            android:tag="3"
            app:layout_column="2"
            app:layout_row="0" />

        <ImageView
            android:id="@+id/img4"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:alpha="0.2"
            android:background="#4CAF50"
            android:contentDescription="@string/lion_or_tiger"
            android:onClick="tappedOnImgGrid"
            android:padding="3dp"
            android:paddingLeft="3dp"
            android:paddingTop="3dp"
            android:paddingRight="3dp"
            android:paddingBottom="3dp"
            android:tag="4"
            app:layout_column="0"
            app:layout_row="1" />

        <ImageView
            android:id="@+id/img5"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:alpha="0.2"
            android:background="#4CAF50"
            android:contentDescription="@string/lion_or_tiger"
            android:onClick="tappedOnImgGrid"
            android:padding="3dp"
            android:paddingLeft="3dp"
            android:paddingTop="3dp"
            android:paddingRight="3dp"
            android:paddingBottom="3dp"
            android:tag="5"
            app:layout_column="1"
            app:layout_row="1" />

        <ImageView
            android:id="@+id/img6"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:alpha="0.2"
            android:background="#4CAF50"
            android:contentDescription="@string/lion_or_tiger"
            android:onClick="tappedOnImgGrid"
            android:padding="3dp"
            android:paddingLeft="3dp"
            android:paddingTop="3dp"
            android:paddingRight="3dp"
            android:paddingBottom="3dp"
            android:tag="6"
            app:layout_column="2"
            app:layout_row="1" />

        <ImageView
            android:id="@+id/img7"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:alpha="0.2"
            android:background="#4CAF50"
            android:contentDescription="@string/lion_or_tiger"
            android:onClick="tappedOnImgGrid"
            android:padding="3dp"
            android:paddingLeft="3dp"
            android:paddingTop="3dp"
            android:paddingRight="3dp"
            android:paddingBottom="3dp"
            android:tag="7"
            app:layout_column="0"
            app:layout_row="2" />

        <ImageView
            android:id="@+id/img9"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:alpha="0.2"
            android:background="#4CAF50"
            android:contentDescription="@string/lion_or_tiger"
            android:onClick="tappedOnImgGrid"
            android:padding="3dp"
            android:paddingLeft="3dp"
            android:paddingTop="3dp"
            android:paddingRight="3dp"
            android:paddingBottom="3dp"
            android:tag="9"
            app:layout_column="2"
            app:layout_row="2" />

        <ImageView
            android:id="@+id/img8"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:alpha="0.2"
            android:background="#4CAF50"
            android:contentDescription="@string/lion_or_tiger"
            android:onClick="tappedOnImgGrid"
            android:padding="3dp"
            android:paddingLeft="3dp"
            android:paddingTop="3dp"
            android:paddingRight="3dp"
            android:paddingBottom="3dp"
            android:tag="8"
            app:layout_column="1"
            app:layout_row="2" />

    </androidx.gridlayout.widget.GridLayout>

    <Button
        android:id="@+id/resetBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="#4CAF50"
        android:text="@string/reset"
        android:textColor="#F0FCCB"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/grid" />
</androidx.constraintlayout.widget.ConstraintLayout>