<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#009688"
    tools:context=".EasyGameModeFragment">

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/gameLayoutPlayerTurn"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/gameLayoutFirst"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/tiger"
            android:padding="10dp"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            app:layout_column="0"
            app:layout_row="0"
            app:srcCompat="@drawable/tiger" />

        <ImageView
            android:id="@+id/gameLayoutVs"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/vs"
            android:padding="10dp"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            app:layout_column="1"
            app:layout_row="0"
            app:srcCompat="@drawable/vs" />

        <ImageView
            android:id="@+id/gameLayoutSecond"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/android"
            android:padding="10dp"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            app:layout_column="2"
            app:layout_row="0"
            app:srcCompat="@drawable/android" />

    </androidx.gridlayout.widget.GridLayout>

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/gridAndroid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="#CDDC39"
        app:columnCount="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gameLayoutPlayerTurn"
        app:rowCount="3">

        <ImageView
            android:id="@+id/imgOne"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:alpha="0.2"
            android:background="#4CAF50"
            android:contentDescription="@string/tiger_or_android"
            android:padding="3dp"
            android:paddingStart="3dp"
            android:paddingLeft="3dp"
            android:paddingTop="3dp"
            android:paddingEnd="3dp"
            android:paddingRight="3dp"
            android:paddingBottom="3dp"
            android:tag="0"
            app:layout_column="0"
            app:layout_row="0" />

        <ImageView
            android:id="@+id/imgTwo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:alpha="0.2"
            android:background="#4CAF50"
            android:contentDescription="@string/tiger_or_android"
            android:padding="3dp"
            android:paddingStart="3dp"
            android:paddingLeft="3dp"
            android:paddingTop="3dp"
            android:paddingEnd="3dp"
            android:paddingRight="3dp"
            android:paddingBottom="3dp"
            android:tag="1"
            app:layout_column="1"
            app:layout_row="0" />

        <ImageView
            android:id="@+id/imgThree"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:alpha="0.2"
            android:background="#4CAF50"
            android:contentDescription="@string/tiger_or_android"
            android:padding="3dp"
            android:paddingStart="3dp"
            android:paddingLeft="3dp"
            android:paddingTop="3dp"
            android:paddingEnd="3dp"
            android:paddingRight="3dp"
            android:paddingBottom="3dp"
            android:tag="2"
            app:layout_column="2"
            app:layout_row="0" />

        <ImageView
            android:id="@+id/imgFour"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:alpha="0.2"
            android:background="#4CAF50"
            android:contentDescription="@string/tiger_or_android"
            android:padding="3dp"
            android:paddingStart="3dp"
            android:paddingLeft="3dp"
            android:paddingTop="3dp"
            android:paddingEnd="3dp"
            android:paddingRight="3dp"
            android:paddingBottom="3dp"
            android:tag="3"
            app:layout_column="0"
            app:layout_row="1" />

        <ImageView
            android:id="@+id/imgFive"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:alpha="0.2"
            android:background="#4CAF50"
            android:contentDescription="@string/tiger_or_android"
            android:padding="3dp"
            android:paddingStart="3dp"
            android:paddingLeft="3dp"
            android:paddingTop="3dp"
            android:paddingEnd="3dp"
            android:paddingRight="3dp"
            android:paddingBottom="3dp"
            android:tag="4"
            app:layout_column="1"
            app:layout_row="1" />

        <ImageView
            android:id="@+id/imgSix"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:alpha="0.2"
            android:background="#4CAF50"
            android:contentDescription="@string/tiger_or_android"
            android:padding="3dp"
            android:paddingStart="3dp"
            android:paddingLeft="3dp"
            android:paddingTop="3dp"
            android:paddingEnd="3dp"
            android:paddingRight="3dp"
            android:paddingBottom="3dp"
            android:tag="5"
            app:layout_column="2"
            app:layout_row="1" />

        <ImageView
            android:id="@+id/imgSeven"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:alpha="0.2"
            android:background="#4CAF50"
            android:contentDescription="@string/tiger_or_android"
            android:padding="3dp"
            android:paddingStart="3dp"
            android:paddingLeft="3dp"
            android:paddingTop="3dp"
            android:paddingEnd="3dp"
            android:paddingRight="3dp"
            android:paddingBottom="3dp"
            android:tag="6"
            app:layout_column="0"
            app:layout_row="2" />

        <ImageView
            android:id="@+id/imgEight"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:alpha="0.2"
            android:background="#4CAF50"
            android:contentDescription="@string/tiger_or_android"
            android:padding="3dp"
            android:paddingStart="3dp"
            android:paddingLeft="3dp"
            android:paddingTop="3dp"
            android:paddingEnd="3dp"
            android:paddingRight="3dp"
            android:paddingBottom="3dp"
            android:tag="7"
            app:layout_column="1"
            app:layout_row="2" />

        <ImageView
            android:id="@+id/imgNine"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:alpha="0.2"
            android:background="#4CAF50"
            android:contentDescription="@string/tiger_or_android"
            android:padding="3dp"
            android:paddingStart="3dp"
            android:paddingLeft="3dp"
            android:paddingTop="3dp"
            android:paddingEnd="3dp"
            android:paddingRight="3dp"
            android:paddingBottom="3dp"
            android:tag="8"
            app:layout_column="2"
            app:layout_row="2" />

    </androidx.gridlayout.widget.GridLayout>

    <Button
        android:id="@+id/resetBtnAndroid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="#4CAF50"
        android:text="@string/reset"
        android:textColor="#F0FCCB"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gridAndroid" />

</androidx.constraintlayout.widget.ConstraintLayout>

